More efficient construction of numbers